# nrf52-rust-playground

./: Cargo.toml  Makefile  jlink.gdb  memory.x
nrf52840-pac/: Cargo.toml
nrf52840-pac/src/: acl.rs  ccm.rs  ficr.rs  i2s.rs  lib.rs  nfct.rs  nvmc.rs  pdm.rs  power.rs  pwm0.rs  qspi.rs  radio.rs  saadc.rs  spi0.rs  spim0.rs  spis0.rs  twi0.rs  twim0.rs  twis0.rs  uart0.rs  uarte0.rs  uicr.rs  usbd.rs
nrf52840-pac/src/aar/: addrptr.rs  enable.rs  events_end.rs  events_notresolved.rs  events_resolved.rs  intenclr.rs  intenset.rs  irkptr.rs  nirk.rs  scratchptr.rs  status.rs  tasks_start.rs  tasks_stop.rs
nrf52840-pac/src/approtect/: disable.rs  forceprotect.rs
nrf52840-pac/src/cc_host_rgf/: host_cryptokey_sel.rs  host_iot_kdr0.rs  host_iot_kdr1.rs  host_iot_kdr2.rs  host_iot_kdr3.rs  host_iot_kprtl_lock.rs  host_iot_lcs.rs
nrf52840-pac/src/ccm/: cnfptr.rs  enable.rs  events_endcrypt.rs  events_endksgen.rs  events_error.rs  inptr.rs  intenclr.rs  intenset.rs  maxpacketsize.rs  mode.rs  outptr.rs  rateoverride.rs  scratchptr.rs  shorts.rs  tasks_crypt.rs  tasks_ksgen.rs  tasks_rateoverride.rs  tasks_stop.rs
nrf52840-pac/src/clock/: ctiv.rs  events_ctstarted.rs  events_ctstopped.rs  events_ctto.rs  events_done.rs  events_hfclkstarted.rs  events_lfclkstarted.rs  hfxodebounce.rs  intenclr.rs  intenset.rs  lfclksrc.rs  lfclksrccopy.rs  lfclkstat.rs  lfrcmode.rs  tasks_cal.rs  tasks_ctstart.rs  tasks_ctstop.rs  tasks_hfclkstart.rs  tasks_hfclkstop.rs  tasks_lfclkstart.rs  tasks_lfclkstop.rs  traceconfig.rs
nrf52840-pac/src/comp/: enable.rs  events_cross.rs  hyst.rs  (+11 more)
(+718 files in other folders)
