[package]
authors = ["Piotr Krawiec <piotr@krawiec.me>"]
edition = "2018"
readme = "README.md"
name = "nrf52-rust-playground"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "nrf52-rust-playground"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
