[workspace]
members = ["nrf52840-pac"]

[package]
edition = "2021"
name = "nrf52-rust-playground"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.7.3"
nrf52840-pac = { path = "nrf52840-pac" }
panic-halt = "0.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "nrf52-rust-playground"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
