[package]
edition = "2021"
name = "nrf52840-pac"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
critical-section = "1.1.1"
vcell = "0.1.3"

[features]
default = ["critical-section", "rt"]
critical-section = []
rt = ["cortex-m-rt/device"]
